| Bug #7648 | Stored procedure crash when invoking a function that returns a bit | ||
|---|---|---|---|
| Submitted: | 4 Jan 2005 0:12 | Modified: | 22 Apr 2005 20:31 |
| Reporter: | Peter Gulutzan | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.3-alpha-debug | OS: | Linux (SUSE 9.2) |
| Assigned to: | Antony Curtis | Target Version: | |
[4 Jan 2005 0:12]
Peter Gulutzan
[4 Jan 2005 1:50]
Miguel Solorzano
Thank you for the bug report.
[19 Apr 2005 11:24]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/24134
[19 Apr 2005 11:51]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/24136
[21 Apr 2005 16:51]
Antony Curtis
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Fixed for 5.0.5
[22 Apr 2005 20:31]
Paul DuBois
Noted in 5.0.5 changelog.
