Bug#7648 - Stored procedure crash when invoking a function that returns a bit   bugfix 9102 corrected the crashing, this corrects the result.